syntax = "proto3";
package Chat.Contract;
option csharp_namespace="Chat.Contract";
import "google/protobuf/timestamp.proto";

message ChatMessageRequest{
	string from=1;
	string to=2;
	string message=3;
	google.protobuf.Timestamp timestamp=4;
}

message ChatMessageResponse{
	string message=1;
	google.protobuf.Timestamp timestamp=4; //Timestamp --DateTimeOffset Or DateTime,Duration --TimeSpan,Decimal-Decimal
}

service ChatService{
	rpc SendMessage(stream ChatMessageRequest) returns (stream ChatMessageResponse);
}



